# mineru-api

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml  setup_venv.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: app.py  requirements.txt
cleanup/: cleanup_outputs.py  cleanup_scheduler.py  requirements.txt
docker/: .env.example  Dockerfile.api  Dockerfile.base  Dockerfile.cleanup  Dockerfile.worker  Dockerfile.worker.cpu  README.md  README.zh.md  build.sh  docker-compose.yml
docs/: API_EXAMPLES.md  API_EXAMPLES.zh.md  CLEANUP_CONTAINER.md  CLEANUP_CONTAINER.zh.md  CONFIGURATION.md  CONFIGURATION.zh.md  DEPLOYMENT.md  DEPLOYMENT.zh.md  DEVELOPMENT.md  DEVELOPMENT.zh.md  README.md  README.zh.md  S3_LIFECYCLE_SETUP.md  S3_LIFECYCLE_SETUP.zh.md  S3_STORAGE.md  S3_STORAGE.zh.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh.md
examples/: client_example.py
shared/: celeryconfig.py  storage.py
worker/: requirements.txt  tasks.py
