[project]
name = "mineru-api"
version = "1.0.0"
description = "Enterprise-grade document parsing service with asynchronous queue processing based on Celery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MinerU-API Contributors"}
]
keywords = ["document-parsing", "mineru", "celery", "fastapi", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/wzdavid/mineru-api"
Documentation = "https://github.com/wzdavid/mineru-api#readme"
Repository = "https://github.com/wzdavid/mineru-api"
Issues = "https://github.com/wzdavid/mineru-api/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
